# cairnos

./: .dockerignore  .gitignore  .npmrc  CLAUDE.md  Dockerfile  LICENSE  README.md  bash.exe.stackdump  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: pages.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/capture/: BrainDump.tsx  QuickCapture.tsx
apps/desktop/src/components/command/: CommandPalette.tsx
apps/desktop/src/components/ui/: badge.tsx  (+15 more)
apps/desktop/src/lib/: accent.ts  api.ts  config.ts  format.ts  queries.ts
apps/desktop/src/routes/: Dashboard.tsx  Ideas.tsx  Inbox.tsx  Landing.tsx  Notes.tsx  ProjectDetail.tsx  Projects.tsx  Reminders.tsx  Settings.tsx  Tasks.tsx
apps/desktop/src/store/: ui.ts
apps/landing/: index.html  package.json  vite.config.ts
apps/landing/src/: App.tsx  index.css
apps/mcp-server/: package.json
apps/mcp-server/src/: index.ts
apps/server/: package.json
apps/server/src/: app.ts  events.ts  http.ts  index.ts  scheduler.ts  semantic.ts
apps/server/src/routes/: braindump.ts  ideas.ts  notes.ts  projects.ts  reminders.ts  system.ts  tasks.ts
docs/: architecture.md  database.md  design-system.md  mcp-setup.md  product-spec.md
scripts/: build-engine.mjs  make-icon.mjs  shot.mjs  verify-engine.mjs
(+20 files in other folders)
